fixed wrong font-size in followers rate

--- a/src/styles/rate.less
+++ b/src/styles/rate.less
@@ -32,6 +32,7 @@
   }
   
   .rate__value {
+    font-size: 16px;
     font-weight: 700;
     margin-bottom: 6px;
   }
